added KNN theory

--- a/KNN_and_Kmeans.ipynb
+++ b/KNN_and_Kmeans.ipynb
@@ -7,7 +7,7 @@
     "collapsed": false
    },
    "source": [
-    "### Import Libraries"
+    "## Import Libraries"
    ]
   },
   {
@@ -35,6 +35,7 @@
     "collapsed": false
    },
    "source": [
+    "## Looking at the Dataset\n",
     "#### Load Dataset and Get a feel of it "
    ]
   },
@@ -210,18 +211,38 @@
     "\n",
     "### How Does the KNN Algorithm Work?\n",
     "Let’s take a simple case to understand this algorithm.  Take the above plot of `Iris Dataset - Scatter Plot of Two Features`. You intend to find out the class of a random point(RP). RP can either be purple or green or yellow and nothing else. The “K” in KNN algorithm is the nearest neighbor we wish to take the vote from. Let’s say K = 3. Hence, we will now make a circle with RP as the center just as big as to enclose only three data points on the plane. \n",
-    "Imagine the three closest points to RP are all yellow. Hence, with a good confidence level, we can say that the RP should belong to the class yellow. Here, the choice became obvious as all three votes from the closest neighbor went to yellow. The choice of the parameter K is very crucial in this algorithm. <u>(K is a hyperparameter, meaning that it is a configuration setting external to the model that can't be learned from the data.)</u> Next, we will understand the factors to be considered to conclude the best K."
+    "Imagine the three closest points to RP are all yellow. Hence, with a good confidence level, we can say that the RP should belong to the class yellow. Here, the choice became obvious as all three votes from the closest neighbor went to yellow. The choice of the parameter K is very crucial in this algorithm. <u>(K is a hyperparameter, meaning that it is a configuration setting external to the model that can't be learned from the data.)</u> Next, we will understand the factors to be considered to conclude the best K.\n",
+    "\n",
+    "## How does the K influence in the algorithm?\n",
+    "The following are the different boundaries separating the two classes with different values of K: \n",
+    "\n",
+    "<img src=\"https://www.analyticsvidhya.com/wp-content/uploads/2014/10/K-judgement.png\" alt=\"Alternative text\" width=\"500\"/>\n",
+    "<img src=\"https://www.analyticsvidhya.com/wp-content/uploads/2014/10/K-judgement2.png\" alt=\"Alternative text\" width=\"500\"/>\n",
+    "\n",
+    "If you watch carefully, you can see that the boundary becomes smoother with increasing value of K. With K increasing to infinity it finally becomes all blue or all red depending on the total majority.  The training error rate and the validation error rate are two parameters we need to access different K-value. Following is the curve for the training error rate with a varying value of K :\n",
+    "\n",
+    "<img src=\"https://www.analyticsvidhya.com/wp-content/uploads/2014/10/training-error.png\" alt=\"Alternative text\" width=\"500\"/>\n",
+    "\n",
+    "As you can see, the error rate at K=1 is always zero for the training sample. _This is because the closest point to any training data point is itself._ Hence the prediction is always accurate with K=1. If validation error curve would have been similar, our choice of K would have been 1. Following is the validation error curve with varying value of K:\n",
+    "\n",
+    "<img src=\"https://www.analyticsvidhya.com/wp-content/uploads/2014/10/training-error_11.png\" alt=\"Alternative text\" width=\"500\"/>\n",
+    "\n",
+    "This makes the story more clear. <u>At K=1, we were overfitting the boundaries.</u> Hence, error rate initially decreases and reaches a minima. After the minima point, it then increase with increasing K. To get the optimal value of K, you can segregate the training and validation from the initial dataset. We can use cross-validation to select the optimal value of k for the k-NN algorithm, which helps improve its performance and prevent overfitting or underfitting. Cross-validation is also used to identify the outliers before applying the KNN algorithm."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Implementing the KNN Algorithm from Scratch"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## "
+   ]
   }
  ],
  "metadata": {
