--- a/KNN_and_Kmeans.ipynb
+++ b/KNN_and_Kmeans.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# K-Nearest neighbors and K-Means Algorithms \n",
+    "We are implementing some basic algorithms, useful in image processing, from scratch to get a better understanding of them and how they work behind the scenes of already made libraries, such as scikit-learn.\n",
+    "First we import the data set (Iris) to get a feel of it. Then we implemet K-Nearest neighbors algorithm and test it on this data set. Finally, we implement K-Means algorithm and do the same. \n",
+    "Some theory and important points about each algorithm are discussed as well."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -592,11 +597,6 @@
     "\n",
     "In summary, while both k-NN and k-means involve the concept of \"k\" and utilize distance metrics, they serve different purposes. k-NN is versatile and applicable to both supervised and unsupervised tasks, while k-means is designed specifically for unsupervised clustering.\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
