updated K-means theory

--- a/KNN_and_Kmeans.ipynb
+++ b/KNN_and_Kmeans.ipynb
@@ -544,14 +544,16 @@
     "`kmeans = KMeans(n_clusters=3, init='k-means++', max_iter=300, n_init=10, random_state=42)`\n",
     "\n",
     "#### What are the disadvantages of using k-means algorithm?\n",
-    "1. difficult to choose the number of clusters, 𝑘\n",
-    "2. cannot be used with arbitrary distances\n",
-    "3. sensitive to scaling – requires careful preprocessing\n",
-    "4. does not produce the same result every time\n",
-    "5. results are dependent on initialization\n",
-    "6. sensitive to outliers (squared errors emphasize outliers)\n",
-    "7. cluster sizes can be quite unbalanced (e.g., one-element outlier clusters) _(blind to cluster size)_\n",
-    "8. doesn't work well if the data point are not well-separated (in this case other clustering methods like Gaussian Mixture Models can be more useful)\n",
+    "1. Many possible solutions, so does not produce the same result every time\n",
+    "2. Every data point is fully assigned to one cluster (hard clustering) \n",
+    "3. Not optimal assignment because some points lie roughly midway between cluster centers \n",
+    "4. difficult to choose the number of clusters, 𝑘\n",
+    "5. sensitive to scaling – requires careful preprocessing\n",
+    "6. results are dependent on initialization\n",
+    "7. sensitive to outliers (squared errors emphasize outliers)\n",
+    "8. cluster sizes can be quite unbalanced (e.g., one-element outlier clusters) _(blind to cluster size)_\n",
+    "9. doesn't work well if the data point are not well-separated (in this case other clustering methods like Gaussian Mixture Models can be more useful)\n",
+    "10. We can never be sure that the solutions K-means find are the best (global optima). K-means finds local optima.\n",
     "\n",
     "#### What are the similarities and differences between k-NN and k-means?\n",
     "\n",
@@ -573,30 +575,41 @@
     "1. _Application:_\n",
     "\n",
     "k-NN: Used for both classification and regression tasks. It predicts the label or value of a data point based on the labels or values of its k-nearest neighbors. It is commonly used in applications where the data has clear labels or values, such as image recognition, recommendation systems, or regression tasks.\n",
+    "\n",
     "k-means: Used for clustering, aiming to partition data points into k clusters based on their similarity. It is suitable for clustering applications, including customer segmentation, image compression, and identifying natural groupings in data.\n",
     "\n",
     "2. _Supervised vs. Unsupervised:_\n",
     "\n",
     "k-NN: Can be used for both supervised and unsupervised learning. In the supervised case, it _classifies or regresses_ based on labeled training data. In the unsupervised case, it identifies patterns in the data without using labeled information.\n",
+    "\n",
     "k-means: Primarily an _unsupervised learning_ algorithm. It does not use labeled data but groups data points into clusters based on their inherent structure.\n",
     "\n",
     "3. _Output:_\n",
     "\n",
     "k-NN: Outputs a label (for classification) or a value (for regression) based on the majority class or average value of its k-nearest neighbors.\n",
+    "\n",
     "k-means: Outputs cluster assignments for each data point, indicating which cluster it belongs to.\n",
     "\n",
     "4. _Training:_\n",
     "\n",
     "k-NN: Typically involves storing the entire training dataset. Prediction involves finding the k-nearest neighbors during inference.\n",
+    "\n",
     "k-means: Involves an iterative process to update cluster centroids until convergence. The training process does not require labeled data.\n",
     "\n",
     "5. _Distance Calculation:_\n",
     "\n",
     "k-NN: Involves calculating distances between the query point and all points in the training set to find the k-nearest neighbors.\n",
+    "\n",
     "k-means: Involves calculating distances between data points and cluster centroids to assign points to clusters and update centroids.\n",
+    "\n",
     "\n",
     "In summary, while both k-NN and k-means involve the concept of \"k\" and utilize distance metrics, they serve different purposes. k-NN is versatile and applicable to both supervised and unsupervised tasks, while k-means is designed specifically for unsupervised clustering.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
