updated Kmeans elbow explanation

--- a/KNN_and_Kmeans.ipynb
+++ b/KNN_and_Kmeans.ipynb
@@ -567,8 +567,9 @@
     "\n",
     "<b> Use an Elbow Method:</b>\n",
     "\n",
-    "Plot the validation error against different values of $k$ and look for the \"elbow\" point, where the error rate starts to stabilize. This point often indicates a good value for $k$.\n",
+    "Plot the validation error against different values of $k$ and look for the \"elbow\" point, where the error rate starts to stabilize. This point often indicates a good value for $k$. \n",
     "\n",
+    "_WCSS (Within-Cluster Sum of Square)_\n",
     "<img src=\"https://miro.medium.com/max/700/1*2YiGFbccfJzt6YXPyVLCfw.png\" alt=\"Alternative text\" width=\"500\"/>\n",
     "\n",
     "<b>K-Means++ Initialization:</b>\n",
@@ -648,6 +649,11 @@
     "\n",
     "Of course Kmeans works best on images whose colors are not too similar (well-separated data)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
